@@ -45,6 +45,7 @@ repr
 round
 setattr
 str
+unistr
 tuple
 type
 vars
