@@ -214,6 +214,17 @@ if str(()) != '()': raise TestFailed, 'str(())'
 if str([]) != '[]': raise TestFailed, 'str([])'
 if str({}) != '{}': raise TestFailed, 'str({})'
 
+print 'unistr'
+if unistr('') <> u'': raise TestFailed, 'unistr(\'\')'
+if unistr('a') <> u'a': raise TestFailed, 'unistr(\'a\')'
+if unistr(u'') <> u'': raise TestFailed, 'unistr(u\'\')'
+if unistr(u'a') <> u'a': raise TestFailed, 'unistr(u\'a\')'
+if unistr(0) <> u'0': raise TestFailed, 'unistr(0)'
+if unistr(0L) <> u'0': raise TestFailed, 'unistr(0L)'
+if unistr(()) <> u'()': raise TestFailed, 'unistr(())'
+if unistr([]) <> u'[]': raise TestFailed, 'unistr([])'
+if unistr({}) <> u'{}': raise TestFailed, 'unistr({})'
+
 print 'tuple'
 if tuple(()) != (): raise TestFailed, 'tuple(())'
 if tuple((0, 1, 2, 3)) != (0, 1, 2, 3): raise TestFailed, 'tuple((0, 1, 2, 3))'
